--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>React App</title>
+        <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClrn5Sq3R5ZU3OYMSKS08Q0l8MjRUkqLs"
+            async
+            defer
+        ></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -32,6 +37,7 @@
         <div id="modal-hook"></div>
         <div id="drawer-hook"></div>
         <div id="root"></div>
+
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
